--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,10 +23,17 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        name: Checkout
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Zip folder
         run: zip -r ToggleScope.zip gamedata README.md
       
+      - name: Publish
+      
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            *.zip
