--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -26,8 +26,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=today::$(date +'%Y.%m.%d')"
+
       - name: Zip folder
-        run: zip -r ToggleScope.zip gamedata README.md
+        run: zip -r ToggleScope.$RELEASE_NAME.zip gamedata README.md
+        env: 
+          RELEASE_NAME: ${{steps.date.outputs.today}}
       
       - name: Publish
         uses: "marvinpinto/action-automatic-releases@latest"
